Fix: log OpenAI response and ensure valid config

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,3 +13,10 @@
   from = "/api/*"
   to = "/.netlify/functions/:splat"
   status = 200
+
+[functions]
+  node_bundler = "esbuild"
+
+[functions.analyzeImage]
+  memory = 1024
+  timeout = 20
